@@ -46,6 +46,8 @@ Changes to Squid-2.4.DEVEL3 ():
 	  by the origin server. Doing so could cause bandwidth spikes and/or
 	  negative hit ratio.
 	- httpd_accel_single_host squid.conf directive
+	- "round-robin" cache_peer counters are reset every 5 minutes to
+	  compensate previously dead peers
 
 Changes to Squid-2.4.DEVEL2 ():
 
